--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "luxon": "^3.3.0",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
+    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "tz-lookup": "^6.1.25",
+    "tzdata": "^1.0.38"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.3.0",
+    "@types/tz-lookup": "^6.1.0"
   }
 }
